k8s/releases/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: roaseq-releases
  labels:
    env: releases
    app: roaseq
